--- a/index.html
+++ b/index.html
@@ -7,28 +7,31 @@
 
 <body>
     <div>
-        <p id="txt-form">Selamat datang di website dukun stress!</p>
-        <div id="jwb-form">
-            <input type="radio" id="tidak-pernah" name="opsi" value="Tidak pernah"></input>
+        <p id="txt-form">1. Seberapa sering Anda merasa kesal karena terjadi sesuatu yang tidak Anda harapkan?</p>
+        <form id="jwb-form">
+            <input type="radio" id="tidak-pernah" name="opsi" value=0></input>
             <label for="tidak-pernah">Tidak pernah</label><br>
 
-            <input type="radio" id="hampir-tidak-pernah" name="opsi" value="Hampir tidak pernah"></input>
+            <input type="radio" id="hampir-tidak-pernah" name="opsi" value=1></input>
             <label for="hampir-tidak-pernah">Hampir tidak pernah</label><br>
 
-            <input type="radio" id="kadang-kadang" name="opsi" value="Kadang kadang"></input>
+            <input type="radio" id="kadang-kadang" name="opsi" value=2></input>
             <label for="kadang-kadang">Kadang kadang</label><br>
 
-            <input type="radio" id="agak-sering" name="opsi" value="Agak sering"></input>
+            <input type="radio" id="agak-sering" name="opsi" value=3></input>
             <label for="agak-sering">Agak sering</label><br>
 
-            <input type="radio" id="sangat-sering" name="opsi" value="Sangat sering"></input>
+            <input type="radio" id="sangat-sering" name="opsi" value=4></input>
             <label for="sangat-sering">Sangat sering</label><br>
-        </div><br>
+        </form><br>
+        <p id="test">.</p>
         <button id="btn-prev" onclick="prevForm()">Prev</button>
         <button id="btn-next" onclick="nextForm()">Next</button>
+        <button id="btn-test" onclick="testForm()">Test</button>
     </div>
     <script>
         let textForm = document.getElementById("txt-form")
+        let jawabForm = document.getElementById("jwb-form")
         let buttonNext = document.getElementById("btn-next")
 
         let formPage = 0
@@ -47,25 +50,145 @@
         ]
 
         let jawabanForms = [
-            'Tidak pernah',
-            'Hampir tidak pernah',
-            'Kadang kadang',
-            'Agak sering',
-            'Sangat sering'
+            {
+                opsi: 'Tidak pernah',
+                score: 0
+            },
+            {
+                opsi: 'Hampir tidak pernah',
+                score: 1
+            },
+            {
+                opsi: 'Kadang kadang',
+                score: 2
+            },
+            {
+                opsi: 'Agak sering',
+                score: 3
+            },
+            {
+                opsi: 'Sangat sering',
+                score: 4
+            },
         ]
+        let userAnswers = ['', '', '', '', '', '', '', '', '', '']
+
+
+        let test = document.getElementById("test")
+        let opsi = document.getElementsByName("opsi");
 
         function prevForm() {
             if (formPage !== 0) {
+
+                for (const perOpsi of opsi) {
+
+                    if (perOpsi.checked === true) {
+                        userAnswers[formPage] = perOpsi.getAttribute("value")
+                        console.log(userAnswers);
+                    }
+                }
+
                 formPage--
                 textForm.innerText = pertanyaanForms[formPage]
+                test.innerText = `formPage: ${formPage}`
+
+                jawabForm.reset()
+                if (userAnswers[formPage] !== '') {
+
+                    if (userAnswers[formPage] == 0) {
+                        opsi[0].setAttribute("checked", "checked")
+                        opsi[1].removeAttribute("checked")
+                        opsi[2].removeAttribute("checked")
+                        opsi[3].removeAttribute("checked")
+                        opsi[4].removeAttribute("checked")
+                    } else if (userAnswers[formPage] == 1) {
+                        opsi[0].removeAttribute("checked")
+                        opsi[1].setAttribute("checked", "checked")
+                        opsi[2].removeAttribute("checked")
+                        opsi[3].removeAttribute("checked")
+                        opsi[4].removeAttribute("checked")
+                    } else if (userAnswers[formPage] == 2) {
+                        opsi[0].removeAttribute("checked")
+                        opsi[1].removeAttribute("checked")
+                        opsi[2].setAttribute("checked", "checked")
+                        opsi[3].removeAttribute("checked")
+                        opsi[4].removeAttribute("checked")
+                    } else if (userAnswers[formPage] == 3) {
+                        opsi[0].removeAttribute("checked")
+                        opsi[1].removeAttribute("checked")
+                        opsi[2].removeAttribute("checked")
+                        opsi[3].setAttribute("checked", "checked")
+                        opsi[4].removeAttribute("checked")
+                    } else if (userAnswers[formPage] == 4) {
+                        opsi[0].removeAttribute("checked")
+                        opsi[1].removeAttribute("checked")
+                        opsi[2].removeAttribute("checked")
+                        opsi[3].removeAttribute("checked")
+                        opsi[4].setAttribute("checked", "checked")
+                    }
+                }
             }
         }
 
         function nextForm() {
             if (formPage !== 9) {
+                for (const perOpsi of opsi) {
+                    // perOpsi = <input type="radio" id="tidak-pernah" name="opsi" value=0></input>
+
+                    // Save data score
+                    if (perOpsi.checked === true) {
+                        userAnswers[formPage] = perOpsi.getAttribute("value")
+                        console.log(userAnswers);
+                        // test.innerText = 'score sebelum: ' + perOpsi.getAttribute("value")
+                    }
+                }
+
                 formPage++
-                textForm.innerText = pertanyaanForms[formPage]
+                textForm.innerText = pertanyaanForms[formPage] // Ganti soal
+                test.innerText = `formPage: ${formPage}`
+
+                jawabForm.reset()
+                if (userAnswers[formPage] !== '') {
+                    console.log('terbaca');
+
+                    if (userAnswers[formPage] == 0) {
+                        opsi[0].setAttribute("checked", "checked")
+                        opsi[1].removeAttribute("checked")
+                        opsi[2].removeAttribute("checked")
+                        opsi[3].removeAttribute("checked")
+                        opsi[4].removeAttribute("checked")
+                    } else if (userAnswers[formPage] == 1) {
+                        opsi[0].removeAttribute("checked")
+                        opsi[1].setAttribute("checked", "checked")
+                        opsi[2].removeAttribute("checked")
+                        opsi[3].removeAttribute("checked")
+                        opsi[4].removeAttribute("checked")
+                    } else if (userAnswers[formPage] == 2) {
+                        opsi[0].removeAttribute("checked")
+                        opsi[1].removeAttribute("checked")
+                        opsi[2].setAttribute("checked", "checked")
+                        opsi[3].removeAttribute("checked")
+                        opsi[4].removeAttribute("checked")
+                    } else if (userAnswers[formPage] == 3) {
+                        opsi[0].removeAttribute("checked")
+                        opsi[1].removeAttribute("checked")
+                        opsi[2].removeAttribute("checked")
+                        opsi[3].setAttribute("checked", "checked")
+                        opsi[4].removeAttribute("checked")
+                    } else if (userAnswers[formPage] == 4) {
+                        opsi[0].removeAttribute("checked")
+                        opsi[1].removeAttribute("checked")
+                        opsi[2].removeAttribute("checked")
+                        opsi[3].removeAttribute("checked")
+                        opsi[4].setAttribute("checked", "checked")
+                    }
+                }
             }
+        }
+
+        function testForm() {
+            jawabForm.reset()
+            opsi[0].setAttribute("checked", "checked")
         }
 
         let testCreate = document.createElement
