dah disatuin masih agak kacau

--- a/index2.html
+++ b/index2.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcomeing</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="super-center-grid">
-        <img src="img/hacktiv8.webp" alt="">
-        <h1>Welcome !</h1>
-        <div class="ini">
-            <form class="anjing">
-               <input class="styled-input" type="text" placeholder="Input your name...">
-               <input class="login-btn " type="button" value="Masuk"/>
-            </form>
-        </div>
-</div>
-</body>
+      <img src="img/hacktiv8.webp" alt="" />
+      <h1>Welcome !</h1>
+      <div class="ini">
+        <form class="anjing">
+          <input
+            class="styled-input"
+            type="text"
+            placeholder="Input your name..."
+          />
+          <input class="login-btn" type="button" value="Masuk" />
+          <a href="soal.html"></a>
+        </form>
+      </div>
+    </div>
+  </body>
 </html>
