--- a/form.html
+++ b/form.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-  <p id="nama-user"></p>
   <div class="super-center-grid">
+    <p id="nama-user"></p>
     <form id="form-rad" class="quiz-card">
       <p id="txt-pertanyaan" class="question">
         1. Seberapa sering Anda merasa kesal karena terjadi sesuatu yang tidak
@@ -34,7 +34,7 @@
         <input class="jawaban" type="radio" id="rad5" name="rad" value="4" />
         <label class="custom-radio" for="rad5">Sangat sering</label>
       </div>
-      <p id="submit-output"></p>
+      <p id="text-info"></p>
       <br />
 
       <!-- <button type="button" onclick="submitButton()" id="btn-submit">submit</button> -->
