--- a/submit.html
+++ b/submit.html
@@ -11,15 +11,46 @@
     <div>
         <h1>EE Stress Tracker Result:</h1>
         <p id="submit-result"></p>
+        <p id="score-result"></p>
+        <table class="classif">
+            <tr>
+                <td>Total Score</td>
+                <td>Keterangan</td>
+            </tr>
+            <tr>
+                <td>0 - 7</td>
+                <td>Normal</td>
+            </tr>
+            <tr>
+                <td>8 - 11</td>
+                <td>Stres ringan</td>
+            </tr>
+            <tr>
+                <td>12 - 15</td>
+                <td>Stres sedang</td>
+            </tr>
+            <tr>
+                <td>16 - 20</td>
+                <td>Stres cukup berat</td>
+            </tr>
+            <tr>
+                <td>Lebih dari 21</td>
+                <td>Stres berat</td>
+            </tr>
+        </table>
     </div>
 
     <script>
         // Ambil hasil dari localStorage
         const stressResult = localStorage.getItem('stressResult');
         const namaUser = localStorage.getItem('namaUser');
+        const scoreTotal = localStorage.getItem('scoreTotal');
 
         // Tampilkan hasil di <p> element
         document.getElementById('submit-result').innerText = `Halo ${namaUser}! ${stressResult}` || 'Gagal';
+        document.getElementById('score-result').innerText = `Total Score Stress: ${scoreTotal}`
+
+        
     </script>
     <!-- <script src="script.js"></script> -->
 </body>
