--- a/form.html
+++ b/form.html
@@ -15,6 +15,7 @@
             1. Seberapa sering Anda merasa kesal karena terjadi sesuatu yang
             tidak Anda harapkan?
           </p>
+          <b id="text-info" style="color: red"></b> 
           <div class="option" for="rad1">
             <input
               class="jawaban"
